fix: update SecurityConfig to use @Value annotations for CORS configuration from environment variables